aligned year slider with map width (kind of), fixed tooltips, and sticky chart toggles
Moved the year slider (#yearSlider) inside #map-container to align width with the map
Updated slider styling
Replaced placeholder tooltip
Updated .mouseleave() to reset circle fill using vis.colorScale(d.mag) instead of hardcoded steelblue, oh and .mousehover() to actually be 1.6 times the original diameter of the circle to kind of "pop out"
Moved chart toggles inside #charts-container
Added margin-bottom to #map-container here and there

--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,26 @@
 #map-container {
   width: 100%;
   height: 600px;
+  margin: 0 auto;
+  margin-bottom: 40px; 
+
 }
 #my-map {
   width: 100%;
-  height: 100%;
+  height: 600px;
+}
+
+#controls {
+  padding: 20px 20px;
+}
+
+#yearSlider {
+  width: 100%; /* now it really means 100% of #map-container */
 }
 
 /* Tooltip for bar charts */
 #tooltip {
   position: absolute;
-  display: none;
   background: #fff;
   box-shadow: 2px 2px 3px 0px rgb(92 92 92 / 0.5);
   border: 1px solid #ddd;
@@ -32,9 +42,19 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  padding: 20px;
+  padding: 40px;
 }
-
+#toggle-bar {
+  position: sticky;
+  top: 0;
+  background-color: #f9f9f9; /* Same as .chart-box to blend in */
+  padding: 10px 20px;
+  border-radius: 8px;
+  width: 100%;
+  z-index: 10;
+  text-align: center;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+}
 /* Each chart container */
 .chart-box {
   display: block;
